<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    android:theme="@style/Theme.MobileAppPanda"
    tools:context=".LoginActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="180sp"
        android:layout_marginTop="40sp"
        android:src="@drawable/panda"
        app:civ_border_color="#00000000"
        app:civ_border_width="5dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginTop="250sp"
        android:background="@color/secondary"
        app:cardCornerRadius="15sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:layout_marginBottom="7sp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/text1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="3sp"
                android:background="@color/black"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20sp"
                android:layout_marginTop="30sp"
                android:layout_marginBottom="10sp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/text2"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/text2Form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginBottom="20sp"
                android:background="@color/secondary"
                app:cardBackgroundColor="@color/textField"
                app:cardCornerRadius="10sp">

                <EditText
                    android:id="@+id/editTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@null"
                    android:ems="10"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/hintText2"
                    android:inputType="textEmailAddress"
                    android:padding="8sp"
                    android:text="ilzam@mail.ru"
                    android:textColor="@color/textInField"
                    android:textSize="18sp" />
<!--                ilzam@mail.ru-->

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10sp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="30sp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/text3"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/text3Form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:background="@color/secondary"
                app:cardBackgroundColor="@color/textField"
                app:cardCornerRadius="10sp">

                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:background="@null"
                    android:ems="10"
                    android:fontFamily="@font/roboto_medium"
                    android:hint="@string/hintText3"
                    android:inputType="textPassword"
                    android:padding="8sp"
                    android:text="Aa123456!"
                    android:textColor="@color/textInField"
                    android:textSize="18sp" />
<!--                Aa123456!-->

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnEnterApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="90sp"
                android:layout_marginTop="40sp"
                android:backgroundTint="@color/primary"
                android:text="@string/btnEnter"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textViewRegistration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="30sp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/textViewReg"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>